--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,9 @@ dependencies {
     //android window
     implementation "androidx.window:window:1.0.0"
 
+    //live data
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
